# protodb

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  clang-format.txt  descriptortool  inspectproto  protodb
docs/: brainstorming.md  naming.md  proto-id.md  todo.md
docs/ideas/: command_line_args.md  inspectproto.md  printproto.md  proto-kv-db.md  proto-schema-db.md  proto-schema-filter.md  proto-schema-id.md  proto-schema-query.md
docs/ideas/api/: message-scanner.md
docs/ideas/tools/: descriptortool.md  inspectproto.md  naming.md  queryproto.md
src/console/: BUILD.bazel  console.cc  console.h  console_test.cc  static_string.h  term_codes.h  term_color.h  term_printer.h  term_sequence.h  test.cc  text_span.h
src/proto_schema_id/: BUILD.bazel  README.md  extensions.proto  message_id.proto  message_id_map.proto
src/protobunny/common/: BUILD.bazel  base.h  error_printer.h  importer.cc  importer.h  source_tree.cc  source_tree.h
src/protobunny/descriptortool/: BUILD.bazel  command_line_parser.cc  command_line_parser.h  descriptortool.cc  descriptortool.h  main.cc
src/protobunny/inspectproto/: BUILD.bazel  command_line_parser.cc  command_line_parser.h  common.cc  common.h  explain.cc  explain.h  guess.cc  guess.h  importer.cc  importer.h  inspectproto.cc  inspectproto.h  inspectproto_cli.cc  inspectproto_cli.h  main.cc
src/protobunny/inspectproto/io/: BUILD.bazel  color_printer.h  console.cc  console.h  mark.cc  mark.h  parsing_scanner.cc  parsing_scanner.h  printer.h  scan_context.h  term_colors.h  text_span.h
src/protobunny/queryproto/: BUILD.bazel  main.cc
src/protodb/: BUILD.bazel  action_explain.cc  action_guess.cc  action_guess.h  action_show.cc  action_show.h  actions.h  command_line_parse.cc  command_line_parse.h  commands.cc  commands.h  comparing_visitor.h  error_printer.h  guess.cc  guess.h  main.cc  protodb.cc  protodb.h  source_tree.cc  source_tree.h  visitor.cc  visitor.h
src/protodb/actions/: BUILD.bazel  action_decode.cc  action_decode.h  action_encode.cc  action_encode.h  action_explain.cc  action_explain.h  action_guess.cc  action_guess.h  action_show.cc  action_show.h  action_stage.cc  action_stage.h  action_update.cc  action_update.h  common.cc  common.h
src/protodb/db/: BUILD.bazel  protodb.cc  protodb.h
src/protodb/io/: BUILD.bazel  color_printer.h  mark.cc  mark.h  parsing_scanner.cc  parsing_scanner.h  printer.h  scan_context.h
src/protoid/: extensions.proto  proto_id.proto  proto_map.proto
src/protoquery/: BUILD.bazel  main.cc
src/records/: BUILD.bazel  records.proto
src/schema_id/: BUILD.bazel  README.md  any.proto  extensions.proto  message_id.proto
test/records/: BUILD.bazel  records_test.py
