module(name = "protodb", version = "0.1.0")

# Bazel dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
#bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_jvm_external", version = "6.6")

bazel_dep(name = "googletest", version = "1.15.2")

# Program dependencies
bazel_dep(name = "abseil-cpp", repo_name = "com_google_absl", version = "20240722.1")
bazel_dep(name = "fmt", version = "10.2.1")
bazel_dep(name = "protobuf", repo_name = "com_google_protobuf", version = "29.3")

# Development dependencies
#bazel_dep(name = "googletest", repo_name = "com_google_googletest", version = "1.14.0.bcr.1",
#          dev_dependency = True)


