cc_binary(
    name = "test",
    srcs = ["test.cc"],
    deps = [":console"],
)

cc_library(
    name = "console",
    srcs = [
        "console.cc",
    ],
    hdrs = [
        "console.h",
    ],
    include_prefix = "console",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        ":printer",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "printer",
    srcs = [
    ],
    hdrs = [
        "term_codes.h",
        "term_color.h",
        "term_colors.h",
        "term_printer.h",
        #"term_sequence.h",
        "term_state.h",
    ],
    include_prefix = "console",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//src/google/protobuf:protobuf_nowkt",
        "@fmt//:fmt",
    ],
)
