cc_binary(
    name = "test",
    srcs = ["test.cc"],
    deps = [":console"],
)

cc_library(
    name = "console",
    srcs = [
        "console.cc",
    ],
    hdrs = [
        "console.h",
        "text_span.h"
    ],
    include_prefix = "console",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/strings",
        "@fmt//:fmt",
    ],
)


