load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "visitor",
    hdrs = [
        "comparing_visitor.h",
        "visitor.h",
    ],
    include_prefix = "protodb",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//src/google/protobuf",
    ],
)

cc_library(
    name = "command_line_parse",
    srcs = [
        "command_line_parse.cc",
    ],
    hdrs = [
        "command_line_parse.h",
    ],
    include_prefix = "protodb",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "//src/protodb/actions",
        "//src/protodb/io",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/log:absl_log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_protobuf//src/google/protobuf",
        "@com_google_protobuf//src/google/protobuf/compiler:importer",
    ],
)

cc_library(
    name = "commands",
    srcs = [
        "commands.cc",
        "source_tree.cc",
    ],
    hdrs = [
        "commands.h",
        "error_printer.h",
        "source_tree.h",
    ],
    include_prefix = "protodb",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        ":command_line_parse",
        "//src/protodb/actions",
        "//src/protodb/io",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/log:absl_log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_protobuf//src/google/protobuf",
        "@com_google_protobuf//src/google/protobuf/compiler:importer",
    ],
)

cc_library(
    name = "protodb_lib",
    deps = [
        ":commands",
        "@com_google_absl//absl/log:initialize",
        "@com_google_protobuf//src/google/protobuf",
    ],
)

cc_binary(
    name = "protodb",
    srcs = ["main.cc"],
    deps = [":protodb_lib"],
)
