load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "protoquery_lib",
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:initialize",
        "@com_google_protobuf//src/google/protobuf",
    ],
)

cc_binary(
    name = "protoquery",
    srcs = ["main.cc"],
    deps = [":protoquery_lib"],
)
