load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    deps = [
        ":base",
        ":error_printer",
        ":importer",
        ":source_tree",
    ],
)

cc_library(
    name = "base",
    hdrs = ["base.h"],
    include_prefix = "protobunny/common",
    strip_include_prefix = "",
)

cc_library(
    name = "error_printer",
    hdrs = ["error_printer.h"],
    include_prefix = "protobunny/common",
    strip_include_prefix = "",
    deps = [
        "@com_google_protobuf//src/google/protobuf/compiler:importer",
    ],
)

cc_library(
    name = "importer",
    srcs = ["importer.cc"],
    hdrs = ["importer.h"],
    include_prefix = "protobunny/common",
    strip_include_prefix = "",
    deps = [
        ":source_tree",
    ],
)

cc_library(
    name = "source_tree",
    srcs = ["source_tree.cc"],
    hdrs = ["source_tree.h"],
    include_prefix = "protobunny/common",
    strip_include_prefix = "",
    deps = [
        "@com_google_protobuf//src/google/protobuf/compiler:importer",
    ],
)
