load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "descriptortool_lib",
    srcs = [
        "command_line_parser.cc",
        "descriptortool.cc",
    ],
    hdrs = [
        "command_line_parser.h",
        "descriptortool.h",
    ],
    include_prefix = "protobunny/descriptortool",
    strip_include_prefix = "",
    deps = [
        "//src/console",
        "//src/protobunny/common",
        "@com_google_protobuf//src/google/protobuf:protobuf_nowkt",
    ],
)

cc_binary(
    name = "descriptortool",
    srcs = ["main.cc"],
    deps = [":descriptortool_lib"],
)
