load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "inspectproto_lib",
    srcs = [
        "common.cc",
        "command_line_parser.cc",
        "guess.cc",
        "explain.cc",
    ],
    hdrs = [
        "common.h",
        "command_line_parser.h",
        "guess.h",
        "explain.h",
    ],
    include_prefix = "protobunny/inspectproto",
    strip_include_prefix = "",
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:initialize",
        "@com_google_protobuf//src/google/protobuf:protobuf_nowkt",
        "//src/protobunny/inspectproto/io",
    ],
)

cc_binary(
    name = "inspectproto",
    srcs = ["main.cc"],
    deps = [":inspectproto_lib"],
)
