load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "inspectproto_lib",
    srcs = [
        "command_line_parser.cc",
        "common.cc",
        "explain.cc",
        "guess.cc",
        "inspectproto.cc",
    ],
    hdrs = [
        "command_line_parser.h",
        "common.h",
        "explain.h",
        "guess.h",
        "inspectproto.h",
    ],
    include_prefix = "protobunny/inspectproto",
    strip_include_prefix = "",
    deps = [
        "//src/console",
        "//src/protobunny/common",
        "//src/protobunny/inspectproto/io",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:initialize",
        "@com_google_protobuf//src/google/protobuf",
    ],
)

cc_binary(
    name = "inspectproto",
    srcs = ["main.cc"],
    deps = [":inspectproto_lib"],
)
