cc_library(
    name = "io",
    deps = [
        ":printer",
    ],
)

cc_library(
    name = "scanner",
    srcs = [
        "mark.cc",
        "parsing_scanner.cc",
    ],
    hdrs = [
        "mark.h",
        "parsing_scanner.h",
        "scan_context.h",
    ],
    include_prefix = "protodb/io",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        ":printer",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//src/google/protobuf",
    ],
)

cc_library(
    name = "printer",
    srcs = [
    ],
    hdrs = [
        "color_printer.h",
        "printer.h",
        "term_colors.h",
    ],
    include_prefix = "protodb/io",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//src/google/protobuf",
    ],
)
