cc_library(
    name = "io",
    deps = [
        ":printer",
        ":scanner",
    ],
)

cc_library(
    name = "scanner",
    srcs = [
        "mark.cc",
        "parsing_scanner.cc",
    ],
    hdrs = [
        "mark.h",
        "parsing_scanner.h",
        "scan_context.h",
    ],
    include_prefix = "protobunny/inspectproto/io",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        ":printer",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//src/google/protobuf",
    ],
)

cc_library(
    name = "text_span",
    srcs = [  ],
    hdrs = [ "text_span.h" ],
    include_prefix = "protobunny/inspectproto/io",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//src/google/protobuf",
        "@fmt//:fmt",
        #"@com_google_absl//absl/log:absl_log",
        #"@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "printer",
    srcs = [
    ],
    hdrs = [
        "printer.h",
    ],
    include_prefix = "protobunny/inspectproto/io",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "//src/console",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/strings",
        "@fmt//:fmt",
        "@com_google_protobuf//src/google/protobuf",
    ],
)
